# storm-group

./: README.MD  app.py  main.py  pyproject.toml
entities/: facts.py  schema.py
service/: facts_service.py
templates/: add_fact.html  add_schema.html  index.html
tests/: test_facts_services.py
